[gd_scene load_steps=4 format=2]

[ext_resource path="res://login_screen.gd" type="Script" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://ActorSprite.tscn" type="PackedScene" id=3]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.153
anchor_top = 0.5
anchor_right = 0.862
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -38.0
margin_right = -10.0
margin_bottom = 38.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_right = 706.0
margin_bottom = 64.0
columns = 2

[node name="Label_Username" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 83.0
margin_bottom = 25.0
text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit_Username" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 87.0
margin_right = 706.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Label_Password" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 39.0
margin_right = 83.0
margin_bottom = 59.0
text = "Password"

[node name="LineEdit_Password" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 87.0
margin_top = 34.0
margin_right = 706.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 706.0
margin_bottom = 94.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 283.0
margin_right = 423.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="Button_Login" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 53.0
margin_bottom = 26.0
text = "Login"

[node name="Button_Register" type="Button" parent="VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 57.0
margin_right = 140.0
margin_bottom = 26.0
text = "Register"

[node name="Popup" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.254
anchor_right = 0.5
anchor_bottom = 0.319
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
margin_left = -113.0
margin_top = -25.0
margin_right = 112.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Popup/VBoxContainer"]
margin_right = 225.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Please choose your avatar"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/VBoxContainer"]
margin_top = 24.0
margin_right = 225.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 28, 17 )

[node name="LeftButton" type="Button" parent="Popup/VBoxContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "<"

[node name="OK" type="Button" parent="Popup/VBoxContainer/HBoxContainer"]
margin_left = 76.0
margin_right = 148.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "OK"

[node name="Sprite" parent="Popup/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
position = Vector2( 115, -56 )
scale = Vector2( -4, 4 )
frame = 0

[node name="RightButton" type="Button" parent="Popup/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 225.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = ">"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
